# air-pollution-stem-fair

./: Cargo.toml  README.md  diesel.toml  package.json  t.js  wrangler.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/backend/: device.rs  mod.rs  records.rs
crates/common/src/db/: mod.rs  schema.rs
crates/scripts/: Cargo.toml
crates/tcp/: Cargo.toml
crates/tcp/src/: error.rs  main.rs  models.rs  process_esp.rs  routes.rs  session_ws.rs
migrations/2024-10-19-173421_init/: down.sql  up.sql
public/: 404.html  index.html  script.js  style.css
src/: index.js
src/app/: globals.css  layout.tsx  page.tsx  robots.ts
src/app/devices/[id]/: page.tsx
src/components/ui/: deviceSkeleton.tsx  mainSkeleton.tsx  map.tsx  realTime.tsx  singleMap.tsx
src/lib/: utils.ts
src/models/: sensor.ts
