[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.0", features = ["bb8", "postgres", "tokio"] }

dotenvy = "0.15.7"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
nanoid = "0.4.0"
chrono = { version = "0.4.38", features = ["serde"] }