[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["net", "rt", "rt-multi-thread", "macros", "time"] }
common = { path = "../common" }
rand = "0.8.5"
futures = "0.3.31"
serde_json = "1.0.132"
axum = { version = "0.7.7", features = ["ws"] }
thiserror = "1.0.64"
serde = { version = "1.0.210", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[[bin]]
name = "tcp-server"
path = "src/main.rs"
